# humaine-swarm

./: .dockerignore  .env-example  .env.example  .gitignore  CALL_KUBEFLOW_API.ipynb  Dockerfile  README.md  app.py  chainlit.md  custom_oauth_provider.py  data_injection.py  diabetes_classification_pipeline.yaml  env.sh.example  minio_auth_pipeline.yaml  pyproject.toml  start.sh  starters.py
.chainlit/: config.toml
.cursor/skills/humaine-swarm-docker-publish/: SKILL.md
.cursor/skills/humaine-swarm-docker-publish/scripts/: publish-amd64.sh
.files-for-rag/: README.md
agents/: code.py  definition.py  system.md
classes/: api_scraper.py  function_handler.py  nodered_scraper.py  rag.py  scraper.py  stream_processor.py  user_handler.py
docs/: 00-README.md
docs/developers/: 01-architecture.md  02-app-flow.md  03-agents-and-tools.md  04-session-and-auth.md  05-data-injection.md  06-utils-and-config.md  07-tool-reference.md
docs/users/: 01-overview.md  02-getting-started.md  03-capabilities.md  04-concepts.md  05-workflows.md
kubeflow/: KubeflowGuide.md  diabetes_demo.py  diabetes_dt_classification_pipeline_minio.yaml  diabetes_dt_demo.py  diabetes_minio_demo.py  diabetes_svm_classification_pipeline_minio.yaml  diabetes_svm_demo.py  get_minio_session_component.yaml  minio_session_component.py
kubeflow/components/: evaluation.py  preprocessing.py  training.py
kubeflow/pipelines/: training_pipeline.py
notebooks/: CALL_KUBEFLOW_API.ipynb  data_loader.ipynb  inference.ipynb  model_training.ipynb
prompts/: system.md
public/: custom_script.js
scripts/: verify_minio_endpoint_override.py
utils/: api_functions.py  config.py  dotenv_local.py  helper_functions.py  keycloak_header_auth.py  starters.py
