[tool.poetry]
name = "humaine-swarm"
version = "0.1.0"
description = "Swarm Learning between human and AI models orchestrated by LLM agents."
authors = ["George Fatouros <gfatouros@innov-acts.com>"]
license = "Apache License 2.0"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
chainlit = "^2.9.0"
openai = "^1.54.0"
langchain-community = "^0.3.2"
tiktoken = "^0.8.0"
kfp = "^2.11.0"
pinecone = "^7.0.0"
llama-index = "^0.14.0"
llama-index-vector-stores-pinecone = "^0.7.1"
llama-index-llms-openai = "^0.5.0"
langchain-openai = "^0.3.0"
langchain-experimental = "^0.3.4"
pypdf = "^5.1.0"
pydantic = "^2.11.5"
minio = "^7.2.15"
boto3 = "^1.37.22"
# tensorflow = "^2.19.0"
# matplotlib = "^3.10.1"
# seaborn = "^0.13.2"
# scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
